[tool.poetry]
name = "llm"
version = "0.7.0"
description = ""
authors = ["jayhack <jayhack.0@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src", from="." },
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
colorama = "^0.4.6"
halo = "^0.0.31"
requests = "2.28.1"



[tool.pdm.build]
includes = ["./src"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.poetry.scripts]
llm = "src.main:main"



[project]
authors = [
    {name = "jayhack", email = "jayhack.0@gmail.com"},
]
requires-python = ">=3.8,<4.0"
dependencies = [
    "click<9.0.0,>=8.1.3",
    "colorama<1.0.0,>=0.4.6",
    "halo<1.0.0,>=0.0.31",
    "requests==2.28.1",
]
name = "llm"
version = "0.7.0"
description = ""
readme = "README.md"

[project.urls]

[project.scripts]
llm = "src.main:main"
